# lfx-T1-pretests

./: .gitignore  README.md
Pre-test-1/: README.md  pre_test1.py
Pre-test-2/: CMakeLists.txt  README.md  fibonacci_impl.cpp  fibonacci_runner.cpp
Pre-test-2/examples/: fibonacci.wat
